# Little-CMS

./: .gitignore  CMakeLists.txt  ChangeLog  Makefile.am  Makefile.in  README.1ST  README.md  aclocal.m4  configure  configure.ac  git_push_all.sh  package.py
.github/workflows/: build.yml
Projects/BorlandC_5.5/: lcms2.rc  lcms2mt.rc
Projects/VC2013/: lcms2mt.rc
Projects/VC2015/: lcms2.rc
Projects/VC2017/: lcms2mt.rc
Projects/VC2019/: lcms2.rc  lcms2.sln  lcms2mt.rc  lcms2mt.sln
Projects/VC2019/jpegicc/: jpegicc.vcxproj
Projects/VC2019/lcms2_DLL/: lcms2_DLL.vcxproj  lcms2_DLL.vcxproj.filters
Projects/VC2019/lcms2_static/: lcms2_static.vcxproj
Projects/VC2019/linkicc/: linkicc.vcxproj
Projects/VC2019/psicc/: psicc.vcxproj
Projects/VC2019/testbed/: testbed.vcxproj
Projects/VC2019/tiffdiff/: tiffdiff.vcxproj
Projects/VC2019/tifficc/: tifficc.vcxproj
Projects/VC2019/transicc/: transicc.vcxproj
Projects/VC2022/: lcms2.rc
include/: Makefile.in  lcms2.h  lcms2mt.h  lcms2mt_plugin.h  monolithic_examples.h
plugins/fast_float/include/: lcms2mt_fast_float.h
plugins/fast_float/src/: Makefile.am  fast_16_tethra.c  fast_8_curves.c  fast_8_matsh.c  fast_8_matsh_sse.c  fast_8_tethra.c  fast_float_15bits.c  fast_float_15mats.c  fast_float_cmyk.c  fast_float_curves.c  fast_float_internal.h  fast_float_lab.c  fast_float_matsh.c  fast_float_separate.c  fast_float_sup.c  fast_float_tethra.c
plugins/fast_float/testbed/: Makefile.am  demo_cmyk.c  fast_float_testbed.c
plugins/threaded/include/: lcms2_threaded.h
src/: Makefile.in  cmsalpha.c  cmscam02.c  cmscgats.c  cmscnvrt.c  cmserr.c  cmsgamma.c  cmsgmt.c  cmsintrp.c  cmsio0.c  cmsio1.c  cmslut.c  cmsmd5.c  cmsmtrx.c  cmsnamed.c  cmsopt.c  cmspack.c  cmspcs.c  cmsplugin.c  cmsps2.c  cmssamp.c  cmssm.c  cmstypes.c  cmsvirt.c  cmswtpnt.c  cmsxform.c  extra_xform.h  lcms2_internal.h  lcms2mt.def
testbed/: Makefile.in  alpha_test.c  testcms2.c  testcms2.h  testplugin.c  testthread.cpp  zoo_icc.c
utils/common/: utils.h  vprf.c  xgetopt.c
utils/jpgicc/: Makefile.in  jpgicc.c
utils/linkicc/: Makefile.in  linkicc.c
utils/matlab/: icctrans.c
utils/psicc/: Makefile.in  psicc.c
utils/samples/: itufax.c  mkcmy.c  mkgrayer.c  mktiff8.c  roundtrip.c  vericc.c  wtpt.c
utils/tificc/: Makefile.in  tifdiff.c  tificc.c
utils/transicc/: Makefile.in  transicc.c
(+5 files in other folders)
